--- a/src/components/DisplayHotelData/index.css
+++ b/src/components/DisplayHotelData/index.css
@@ -7,10 +7,16 @@
 }
 
 .hotel-img {
-  width: 700px;
+  width: 500px;
   margin-right: 80px;
+  margin-bottom: 40px;
   border-radius: 10px;
   box-shadow: 10px 10px 20px 10px #434647;
+}
+
+.hotel-li {
+  list-style-type: none;
+  margin-bottom: 40px;
 }
 
 .h-d-p {
@@ -49,6 +55,7 @@
   font-size: 20px;
   border: 0;
   border-radius: 4px;
+  margin-bottom: 20px;
   cursor: pointer;
   outline: none;
   padding: 10px 25px 10px 25px;
@@ -64,7 +71,7 @@
   }
 
   .hotel-img {
-    width: 280px;
+    width: 230px;
     margin-right: 40px;
     margin-bottom: 20px;
   }
